Changes to make sure email is specified in nextcloud user setup

--- a/nextcloud_odoo_sync/views/nc_sync_user_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_user_views.xml
@@ -35,19 +35,24 @@
 							<field name="user_has_calendar" invisible="1"/>
 							<field name="user_name"/>
 							<field name="nc_calendar_id" widget="selection" domain="[('user_id', '=', user_id)]"
-								attrs="{'required': [('user_has_calendar', '=', True)], 'invisible':[('user_has_calendar', '=', False)]}"/>
-							<field name="nc_email" attrs="{'invisible':[('user_has_calendar','=',False)]}" readonly="1"/>
+								attrs="{'required': [('user_has_calendar', '=', True),('nc_email','!=',False)], 'invisible':['|',('user_has_calendar', '=', False),('nc_email','=',False)]}"/>
+							<field name="nc_email" attrs="{'invisible':[('user_has_calendar','=',False)]}" readonly="1" force_save="1"/>
 						</group>
 						<group>
 							<field name="nc_password" password="True"/>
 							<field name="start_date" attrs="{'required': [('user_has_calendar', '=', True)], 'invisible':[('user_has_calendar', '=', False)]}"/>
-							<field name="sync_calendar" attrs="{'invisible':[('nc_calendar_id','=',False)]}"/>
+							<field name="sync_calendar" attrs="{'invisible':['|',('nc_calendar_id','=',False),('nc_email','=',False)]}"/>
 							<field name="nextcloud_user_id" invisible="1"/>
 						</group>
 					</group>
 					<div class="alert alert-info" role="alert" attrs="{'invisible': [('nc_calendar_id', '=', False)]}">
 					  	<span>
 					  		<field name="user_message" readonly="1" force_save="1"/>
+					  	</span>
+					</div>
+					<div class="alert alert-info" role="alert" attrs="{'invisible': ['|',('nc_email', '!=', False),('user_has_calendar','=',False)]}">
+					  	<span>
+					  		Make sure you use the correct username to login. The Email field should be populated with your email
 					  	</span>
 					</div>
 				</sheet>
