--- a/nextcloud_odoo_sync/views/calendar_event_views.xml
+++ b/nextcloud_odoo_sync/views/calendar_event_views.xml
@@ -48,6 +48,7 @@
 				</div>
 				<field name="nc_calendar_ids" widget="many2many_tags" invisible="1"/>
 				<field name="nc_require_calendar" invisible="1"/>
+				<field name="nc_event_updateable" invisible="1"/>
 			</field>
 
 			<field name="alarm_ids" position="replace">
@@ -67,6 +68,9 @@
 				<div class="alert alert-info" role="alert" style="margin-bottom:0px;" attrs="{'invisible': [('nc_require_calendar', '=', False)]}">
 					Events created in Odoo is Public by default. Check Privacy in Options tab to change to Private otherwise.<br/>
 					The following reminders are not supported in Nextcloud and will not be synced: <i>Email - 3 Hours</i>, <i>Email - 6 Hours</i>
+                </div>
+				<div class="alert alert-info" role="alert" style="margin-bottom:0px;" attrs="{'invisible': [('nc_event_updateable', '=', True)]}">
+					You cannot create/update nextcloud events for calendars other than default one
                 </div>
 			</xpath>
       	</field>
