--- a/nextcloud_odoo_sync/views/nc_sync_user_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_user_views.xml
@@ -6,6 +6,7 @@
 			<tree string="Nextcloud Sync User Tree">
 				<field name="user_id"/>
 				<field name="user_name"/>
+				<field name="nextcloud_url"/>
 				<field name="sync_calendar"/>
 			</tree>
 		</field>
@@ -36,11 +37,14 @@
 							<field name="user_name"/>
 							<field name="nc_calendar_id" widget="selection" domain="[('user_id', '=', user_id)]"
 								attrs="{'required': [('user_has_calendar', '=', True),('nc_email','!=',False)], 'invisible':['|',('user_has_calendar', '=', False),('nc_email','=',False)]}"/>
+							<field name="nc_calendar_ids" widget="many2many_tags" domain="[('user_id', '=', user_id),('id','!=',nc_calendar_id)]"
+								attrs="{'invisible':['|',('user_has_calendar', '=', False),('nc_email','=',False)]}" options="{'no_create': True, 'no_create_edit':True}"/>
 							<field name="nc_email" attrs="{'invisible':[('user_has_calendar','=',False)]}" readonly="1" force_save="1"/>
 						</group>
 						<group>
 							<field name="nc_password" password="True"/>
 							<field name="start_date" attrs="{'required': [('user_has_calendar', '=', True)], 'invisible':[('user_has_calendar', '=', False)]}"/>
+							<field name="nextcloud_url"/>
 							<field name="sync_calendar" attrs="{'invisible':['|',('nc_calendar_id','=',False),('nc_email','=',False)]}"/>
 							<field name="nextcloud_user_id" invisible="1"/>
 						</group>
