--- a/nextcloud_odoo_sync/views/res_config_settings_views.xml
+++ b/nextcloud_odoo_sync/views/res_config_settings_views.xml
@@ -8,46 +8,35 @@
            	<xpath expr="//div[hasclass('settings')]" position="inside">
            		<div class="app_settings_block" data-string="Nextcloud" string="Nextcloud" data-key="nextcloud_odoo_sync" id="nextcloud">
            			<div id="nextcloud_general_settings">
-                        <h2>General</h2>
-                        <div class="row mt16 o_settings_container" name="users_setting_container">
-                            <div class="col-12 col-lg-6 o_setting_box" id="active_user_setting">
-                            	<div class="o_setting_left_pane">
-                              <field name="enable_calendar_sync" nolabel="1"/>
-                          </div>
+                        <div>
+                        <h2>Recurring Event Limits And Log Capacity</h2>
+                        <div class="row mt16 o_settings_container" name="default_recurring_events_limit_settings_container">
+                            <div class="col-12 col-lg-6 o_setting_box" id="default_limits" title="These limits would be applied to new recurring events being created from nextcloud or to be synced with nextcloud.">
+                                <div class="o_setting_left_pane"/>
                                 <div class="o_setting_right_pane">
-                                	<label for="enable_calendar_sync"/>
-                                	<div class="text-muted">
-                                      	Define NextCloud admin user cridentials
-                              		</div>
-                                	<div class="content-group">
-                                        <div class="mt8 row">
-                                            <label for="nextcloud_url" class="col-3 col-lg-3"/>
-                                            <field name="nextcloud_url" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
-                                        </div>
+                                    <span class="o_form_label">Default Recurring Event Limits</span>
+                                    <div class="text-muted">
+                                        Default Limits Applied To Recurring Events(With End Date As 'Forever') Being Created From/To be Synced to Nextcloud.
+                                        Define In Years The Limit For Each Of Frequency For Which The Events Should Be Created.
                                     </div>
                                     <div class="content-group">
-                                        <div class="mt8 row">
-                                            <label for="nextcloud_login" class="col-3 col-lg-3"/>
-                                            <field name="nextcloud_login" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
+                                        <div class="row mt16">
+                                            <label string="Daily Limit(In Years)" for="daily_recurring_events_limit" class="col-lg-3"/>
+                                            <field name="daily_recurring_events_limit" required="1"/>
+                                        </div>
+                                        <div class="row mt16">
+                                            <label string="Weekly Limit(In Years)" for="weekly_recurring_events_limit" class="col-lg-3"/>
+                                            <field name="weekly_recurring_events_limit" required="1"/>
+                                        </div>
+                                        <div class="row mt16">
+                                            <label string="Monthly Limit(In Years)" for="monthly_recurring_events_limit" class="col-lg-3"/>
+                                            <field name="monthly_recurring_events_limit" required="1"/>
+                                        </div>
+                                        <div class="row mt16">
+                                            <label string="Yearly Limit(In Years)" for="yearly_recurring_events_limit" class="col-lg-3"/>
+                                            <field name="yearly_recurring_events_limit" required="1"/>
                                         </div>
                                     </div>
-                                    <div class="content-group">
-                                        <div class="mt8 row">
-                                            <label for="nextcloud_password" class="col-3 col-lg-3"/>
-                                            <field name="nextcloud_password" password="True" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
-                                        </div>
-                                    </div>
-                                    <div class="content-group">
-                                        <div class="mt8 row">
-                                            <label for="nextcloud_connection_status" class="col-3 col-lg-3"/>
-                                            <field name="nextcloud_connection_status" readonly="1"/>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-lg-6 o_setting_box" id="nc_error" attrs="{'invisible': [('nextcloud_connection_status', '!=', 'fail')]}">
-                                <div class="o_setting_right_pane">
-                                    <field name="nextcloud_error" placeholer="Error" readonly="1"/>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-6 o_setting_box" id="logs_setting">
@@ -55,9 +44,10 @@
                                     <label for="log_capacity"/>
                                 </div>
                                 <div class="o_setting_right_pane">
-                                    <field name="log_capacity" attrs="{'required':[('enable_calendar_sync','=',True)]}"/> days
+                                    <field name="log_capacity" required="1"/> days
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
            		</div>
